# log_rotator

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.hpp.in
